# SportsAnalytics-CV

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PERFORMANCE_OPTIMIZATIONS.md  README.md  SECURITY.md  app.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  codeql.yml
configs/: config.yaml
data/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: COMPLETE_SETUP_GUIDE.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md
notebooks/: color_assignment.ipynb  football_training_yolo_v5.ipynb
scripts/: download_models.py
src/: __init__.py  worker.py
src/api/: __init__.py  main.py  models.py
src/camera_movement/: __init__.py  camera_movement_estimator.py
src/player_ball_assigner/: __init__.py  player_ball_assigner.py
src/speed_distance/: __init__.py  speed_and_distance_estimator.py
src/team_assigner/: __init__.py  team_assigner.py
src/trackers/: tracker.py
src/utils/: __init__.py  bbox_utils.py  config.py  video_utils.py
src/view_transformer/: __init__.py  view_transformer.py
tests/: __init__.py  conftest.py  test_api.py  test_camera_movement.py  test_config.py  test_performance_fixes.py  test_performance_optimizations.py  test_player_ball_assigner.py  test_speed_distance.py  test_team_assigner.py  test_tracker.py  test_utils.py  test_video_utils.py  test_view_transformer.py
