[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sportsanalytics-cv"
version = "1.1.0"
description = "Real-time sports video analytics with computer vision"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Malav Patel", email = "malav.patel203@gmail.com"},
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU dependencies",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/api/__init__.py",
    "src/*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
